--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build": "npx vercel build --prod" <--- ADD THIS LINE
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -45,7 +46,8 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "vercel": "^42.3.0"
   },
   "private": true
 }
