--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build": "expo export --web"
+    "build": "expo export"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
