--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_Maps_API_KEY": "@next_public_Maps_api_key"
-    }
-  },
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "buildCommand": "npm run build",
+  "env": {
+    "NEXT_PUBLIC_Maps_API_KEY": "@next_public_Maps_api_key"
+  }
 }
